--- a/asd-grid/css/home.css
+++ b/asd-grid/css/home.css
@@ -1,3 +1,7 @@
+body{
+    text-overflow: ellipsis;
+}
+
 .container-fluid{
     text-align: center;
 }
@@ -61,4 +65,24 @@ nav li{
 .footer a{
     text-decoration: none;
     color: blanchedalmond;
+}
+h1{
+    font-size: 4vw;
+}
+h2{
+    font-size: 3.2vw;
+}
+h3{
+    font-size: 3vmin;
+}
+h4{
+    font-size: 1.5vmax;
+}
+.logo{
+    width: 100%;
+}
+@media only screen and (max-width:720px){
+    .logo{
+        width:27vw;
+    }
 }
