--- a/asd/css/app.css
+++ b/asd/css/app.css
@@ -133,3 +133,24 @@ nav li{
     -webkit-border-radius: 50%;
     border-radius: 50%;
 }
+
+h1{
+    font-size: 4vw;
+}
+h2{
+    font-size: 3.2vw;
+}
+h3{
+    font-size: 3vmin;
+}
+h4{
+    font-size: 1.5vmax;
+}
+.logo{
+    width: 100%;
+}
+@media only screen and (max-width:720px){
+    .logo{
+        width:27vw;
+    }
+}
